[gd_scene load_steps=13 format=2]

[ext_resource path="res://scenes/characters/enemies/EnemyMove.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/characters/enemies/Walrus.gd" type="Script" id=2]
[ext_resource path="res://scenes/characters/enemies/WalrusMoveStates.gd" type="Script" id=3]
[ext_resource path="res://assets/sfx/walrus_hit.wav" type="AudioStream" id=4]
[ext_resource path="res://assets/sfx/walrus_die.wav" type="AudioStream" id=5]
[ext_resource path="res://assets/sfx/walrus_attack.wav" type="AudioStream" id=6]

[sub_resource type="Shader" id=2]
code = "shader_type canvas_item;

uniform vec4 hit_color : hint_color = vec4(1.0, 1.0, 1.0, 1.0);
uniform float hit_strength : hint_range(0.0,1.0) = 0.0;

void fragment() {
	vec4 custom_color = texture(TEXTURE, UV);
	custom_color.rgb = mix(custom_color.rgb, hit_color.rgb, hit_strength);
	COLOR = custom_color;
}"

[sub_resource type="ShaderMaterial" id=3]
resource_local_to_scene = true
shader = SubResource( 2 )
shader_param/hit_color = Color( 0.74902, 0.14902, 0.317647, 1 )
shader_param/hit_strength = 0.0

[sub_resource type="CircleShape2D" id=1]
radius = 13.0

[sub_resource type="AudioStreamRandomPitch" id=5]
audio_stream = ExtResource( 4 )

[sub_resource type="AudioStreamRandomPitch" id=4]
audio_stream = ExtResource( 5 )

[sub_resource type="AudioStreamRandomPitch" id=6]
audio_stream = ExtResource( 6 )

[node name="Walrus" instance=ExtResource( 1 )]
script = ExtResource( 2 )
max_freeze_health = 1
after_attack_state = "retreat"

[node name="EnemyMoveStates" parent="." index="0"]
script = ExtResource( 3 )

[node name="VisualDependents" parent="." index="1"]
material = SubResource( 3 )

[node name="AnimatedSprite" parent="VisualDependents" index="1"]
animation = "idle"

[node name="Hitbox" type="Area2D" parent="VisualDependents" index="2"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="VisualDependents/Hitbox" index="0"]
position = Vector2( 20, -7 )
shape = SubResource( 1 )

[node name="SoftCollision" parent="VisualDependents" index="3"]
friction = 1000

[node name="AttackPos" type="Position2D" parent="VisualDependents" index="4"]
position = Vector2( 22, -1 )

[node name="FreezeTexture" parent="VisualDependents" index="5"]
polygon = PoolVector2Array( 0, 6, -4, 1, -25, 0, -25, -8, -12, -16, -1, -23, 10, -24, 25, -13, 20, -3, 6, 7 )

[node name="ParticlePosition" parent="VisualDependents" index="6"]
position = Vector2( 6, -6 )

[node name="IdleWaitTimer" type="Timer" parent="." index="6"]
one_shot = true

[node name="RetreatTimer" type="Timer" parent="." index="7"]
one_shot = true

[node name="HurtSFX" parent="." index="12"]
stream = SubResource( 5 )

[node name="DeathSFX" parent="." index="13"]
stream = SubResource( 4 )

[node name="AttackSFX" type="AudioStreamPlayer2D" parent="." index="15"]
stream = SubResource( 6 )
bus = "SFX"

[connection signal="body_entered" from="VisualDependents/Hitbox" to="." method="_on_Hitbox_body_entered"]
[connection signal="timeout" from="IdleWaitTimer" to="." method="_on_IdleWaitTimer_timeout"]
[connection signal="timeout" from="RetreatTimer" to="." method="_on_RetreatTimer_timeout"]
